--- a/1/index.html
+++ b/1/index.html
@@ -14,7 +14,7 @@
 <h2>这是二标题</h2>
 <h3>这是三标题</h3>
 	<p>结合实际难上加难井上康生老师就<a href="_blank">这是一个链接</a>看见了什么卡塞雷斯门口鲁梅克斯来上课</p>
-	<img src="../1/img/屏幕快照 2016-12-19 13.53.24.png"/ width="200px" >
+	<img src="../1/img/屏幕快照 2016-12-19 13.53.24.png" width="200px" />
 	<div>
 		<h2>还是一个二标题</h2>
 		<p>回家就是看看健康了几款耐克空军<a href="www.baidu.com">这是百度的链接</a>就会看见快来看看</p>
