--- a/4/index.html
+++ b/4/index.html
@@ -3,12 +3,23 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>这是任务四</title>
+	<title>cat'miao</title>
 </head>
 <body>
-	<div class="main">
-		<div class="left"></div>
-		<div class="right"></div>
+	<div>
+		<div class="header">
+			<div class="header_wrap">
+				
+			</div>
+			<div class="header_mian">
+			</div>
+			<div class="nav">
+			</div>
+		</div>
+		<div class="main">
+		</div>
+		<div class="footer">
+		</div>
 	</div>
 </body>
 </html>
